--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/">
       <h1>Pablo Arrieumerlou</h1>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -10,10 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">CV</a>
+          <a class="nav-link" href="../assets/CV_Pablo Arrieumerlou.pdf" download="PabloArrieumerlou">CV</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -40,7 +40,13 @@
     </div>
   </div>
 </nav>
-
+<div class="row" data-masonry="{&quot;percentPosition&quot;: true }" style="position: relative; width: 70%;">
+  <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 0%; top: 0x;">
+    <div class="card">
+      <img class="card-img" src="../assets/CV_PabloArrieumerlou.png" height="50%" width="50px">
+    </div>
+  </div>
+</div>
 <ng-template #demoModal let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
