Ajout de l'icone "Moi" à la barre de navigation

--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <h1>Pablo Arrieumerlou</h1>
+      <img src="../assets/ProBG.png" style="height: 50px; width: 50px; border: 3px #0071BC solid; border-radius: 50px;">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
