Ajout du lien au CV

--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -43,7 +43,9 @@
 <div class="row" data-masonry="{&quot;percentPosition&quot;: true }" style="position: relative; width: 70%;">
   <div class="col-sm-6 col-lg-4 mb-4" style="position: absolute; left: 0%; top: 0x;">
     <div class="card">
-      <img class="card-img" src="../assets/CV_PabloArrieumerlou.png" height="50%" width="50px">
+      <a href="../assets/CV_Pablo Arrieumerlou.pdf" download="PabloArrieumerlou">
+        <img class="card-img" src="../assets/CV_PabloArrieumerlou.png" height="50%" width="50px">
+      </a>
     </div>
   </div>
 </div>
