--- a/portfolio/src/styles.sass
+++ b/portfolio/src/styles.sass
@@ -3,6 +3,17 @@
 $block-size: 15%
 $columns: 12
 
+html, body
+    margin: 0
+
+body
+    background-size: 100% 100%
+    &.aqua
+        background-image: linear-gradient(10deg, #0071BC, #00A99D)
+    &.pyro
+        background-image: linear-gradient(190deg, #0071BC, #00A99D)
+        background-blend-mode: difference
+
 @mixin grid-item--list
 @for $i from 1 through $columns
     .grid-item--w#{$i}
