--- a/portfolio/src/app/core/navbar/navbar.component.html
+++ b/portfolio/src/app/core/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
+<nav class="navbar navbar-expand-sm navbar-light bg-light sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="../assets/ProBG.png"
