--- a/portfolio/src/styles.sass
+++ b/portfolio/src/styles.sass
@@ -5,8 +5,10 @@ $columns: 12
 
 html, body
     margin: 0
-
+    height: 100%
 body
+    background-repeat: no-repeat
+    background-attachment: fixed
     background-size: 100% 100%
     -ms-overflow-style: none
     scrollbar-width: none
