--- a/portfolio/src/app/core/navbar/navbar.component.html
+++ b/portfolio/src/app/core/navbar/navbar.component.html
@@ -16,6 +16,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="../assets/CV_Pablo Arrieumerlou.pdf" download="PabloArrieumerlou">CV</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/developpement">Environnement</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
