--- a/portfolio/src/app/core/navbar/navbar.component.html
+++ b/portfolio/src/app/core/navbar/navbar.component.html
@@ -11,30 +11,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">🏠 Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../assets/CV_Pablo Arrieumerlou.pdf" download="PabloArrieumerlou">CV</a>
+                    <a class="nav-link" href="../assets/CV_Pablo Arrieumerlou.pdf" download="PabloArrieumerlou">📝
+                        CV</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/developpement">Environnement</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link" href="/developpement">💻 Environnement</a>
                 </li>
             </ul>
             <form class="d-flex">
