--- a/portfolio/src/app/developpement/developpement.component.html
+++ b/portfolio/src/app/developpement/developpement.component.html
@@ -1,3 +1,4 @@
+<h2 class="text-center">💻 Environnement</h2>
 <div class="row" data-masonry="{'percentPosition': true }">
     <app-card *ngFor="let thisCard of this.mainCards" [currentCard]="thisCard"
         class="col-sm-6 col-lg-4 mb-4"></app-card>
