--- a/portfolio/src/app/core/navbar/navbar.component.html
+++ b/portfolio/src/app/core/navbar/navbar.component.html
@@ -11,14 +11,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">🏠 Home</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/">🏠 Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../assets/CV_Pablo Arrieumerlou.pdf" download="PabloArrieumerlou">📝
-                        CV</a>
+                    <a class="nav-link" href="../assets/CV_Pablo Arrieumerlou.pdf" download="PabloArrieumerlou">📝CV</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/developpement">💻 Environnement</a>
+                    <a class="nav-link" routerLink="/technologies">🧰 Technologies</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/developpement">💻 Environnement</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="/contact">📫 Contact</a>
                 </li>
             </ul>
             <form class="d-flex">
